Correccion de pruebas y mejora de coberturaa.